--- a/musician.html
+++ b/musician.html
@@ -35,7 +35,7 @@
         confirmed = confirm("Are these the values? "+age+" and "+nick)
         
         out = document.getElementById("result")
-        if(age==nick){sa1
+        if(age==nick){
             alert("You got it right")
              correct = correct+1
             out.innerHTML = "correct answer:"+ correct +"wrong answer:"+ wrong
