--- a/musician.html
+++ b/musician.html
@@ -13,7 +13,7 @@
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
     <style>
         body{
-        background-color:green;
+        background-color:aquamarine;
         }
     </style>
 </head>
